<resources>
    <string name="app_name">GduSDKDemo</string>
    <string name="sdk_version">GDU SDK Version: %1$s</string>
    <string name="Label_N_A">N/A</string>
    <string name="ux_battery_percent">%1$d%%</string>
    <string name="ux_battery_percent_str">%1$s%%</string>
    <string name="ux_battery_voltage_unit">%.2f V</string>
    <string name="preflight_checks">Pre-flight check</string>
    <string name="Label_SystemStatus">System Status</string>
    <string name="aircraft_not_connect">Aircraft not connected</string>
    <string name="string_aircraft_battery">Aircraft battery</string>
    <string name="string_rc_battery">Remote control battery</string>
    <string name="flight_plane_rtk_status">RTK</string>
    <string name="string_states_sd">Memory card</string>
    <string name="string_rc_control">Remote control</string>
    <string name="Label_AlarmReminder">Alarm Reminder</string>
    <string name="fly_mode">Fly Mode</string>
    <string name="Label_heightBack">Return altitude</string>
    <string name="Label_ETDigitLimit1">1234567890</string>
    <string name="Label_HeightLimit">Altitude limit</string>
    <string name="Label_GoHomePoint">Home point</string>
    <string name="aircraft">aircraft</string>
    <string name="Label_RemoteControl">Rc</string>
    <string name="out_of_control">Communication loss</string>
    <string name="flight_type_return">Returning</string>
    <string name="flight_type_stop">Hovering</string>
    <string name="rc_direction_schematically">Control stick mode</string>
    <string name="Label_AmericaHand">America</string>
    <string name="Label_ChinaHand">China</string>
    <string name="Label_JapanHand">Japan</string>
    <string name="Label_DistanceLimit">Distance limit</string>
    <string name="Label_LowPowerAlarm">Low power alert</string>
    <string name="Msg_UltraLowBattery">Emergency low power </string>
    <string name="Msg_LowBattery">Low power </string>
    <string name="vision_obstacle">Visual obstacle avoidance</string>
    <string name="vision_obstacle_strategy">Active stop</string>
    <string name="Label_AroundObstacle">4-direction obstacle avoidance </string>
    <string name="Msg_Unopened">Not Open</string>
    <string name="Label_BrakeStopDistance">Brake stop</string>
    <string name="Label_AlarmDistance">Alarm</string>
    <string name="Label_TopObstacle">Upward obstacle avoidance</string>
    <string name="Label_BottomObstacle">Downward obstacle avoidance</string>
    <string name="next_step">Next</string>
    <string name="string_states_translate">Image transmission state</string>
    <string name="Label_AircraftStatusAbnormal">Aircraft Status Abnormal</string>
    <string name="Label_AircraftStatusNormal">Aircraft Status Normal</string>
    <string name="Msg_PreCheckDefaultAlarm">Please make sure that the aircraft arms have been unfolded and fixed firmly and properly.</string>
    <string name="preflight_engine_arm_check_hint">Please make sure that the aircraft arms have been unfolded and fixed firmly and properly.</string>
    <string name="view_details">check the details</string>
    <string name="Label_FlyMode_AGear">A Gear</string>
    <string name="Label_FlyMode_TGear">T Gear</string>
    <string name="Label_FlyMode_FGear">S Gear</string>
    <string name="Label_FlyMode_PGear">P Gear</string>
    <string name="Label_FlyMode_VGear">V Gear</string>
    <string name="string_not_insert">Not inserted</string>
    <string name="flight_connect">Connected</string>
    <string name="DeviceNoConn">Aircraft not connected</string>
    <string name="Label_MasterRemoteControl">Master remote controller</string>
    <string name="Label_SubRemoteControl">Sub remote controller</string>
    <string name="string_link_type_image_transmission">Main-image transmission</string>
    <string name="string_link_type_let">backups-LET</string>
    <string name="Label_NoCardInserted">SD card not inserted</string>
    <string name="Label_AbnormalSDCard">Abnormal card</string>
    <string name="Label_LowSpeedSDCard">Low speed card</string>
    <string name="Label_SdISFULL">Card is full</string>
    <string name="Label_SdFormatErr">Card format is error</string>
    <string name="string_set_success">Set successfully</string>
    <string name="Label_SettingFail">Set fail</string>
    <string name="input_error">Please enter the correct value</string>
    <string name="Msg_LimitHeight_LessThan_BackHeight">The restricted altitude cannot be lower than the return altitude</string>
    <string name="warm_prompt">Kind tips</string>
    <string name="Label_Sure">OK</string>
    <string name="Sure">Save</string>
    <string name="OK">OK</string>
    <string name="Label_cancel">Cancel</string>
    <string name="Toast_planset_fly_pager_limit_height_statement">Disclaimer of altitude constraint</string>
    <string name="limit_height_statement_content">You are setting the altitude constraint.
					Disabling the altitude constraint setting it as more than 120m(about 400ft)may be in violation of local laws.
					You fully understand that you and only you will assume legal
					responsibility for the subsequent flights,Drone manufacturer and its branch offices will not take responsibility for any
					consequences after this setting, both in contracts and equity.</string>
    <string name="think_moment">Think twice</string>
    <string name="think_agree">I agree</string>
    <string name="sting_tether_model">Tethering mode</string>
    <string name="string_tether_can_not_set">The tethering mode cannot be set</string>
    <string name="Msg_GoHomingUnSet">Unable to set up in the return</string>
    <string name="sure_switch_hand_title">Confirm to switch the control mode?</string>
    <string name="sure_switch_hand_content">Switching the control mode during aircraft flight has major risks, please operate with caution!</string>
    <string name="string_back_home_point_to_now_airf">The return point is set to the current position of the aircraft, and will not move and change with the aircraft after setting.</string>
    <string name="string_start_fly_point">Take-off point</string>
    <string name="string_target_point">Target point</string>
    <string name="string_back_home_point_to_rc">The return point is set to the current location of the remote control. After setting, it will not move and change with the remote control.</string>
    <string name="string_back_home_point_to_target_point">The return point is set to the current location of the target point, and will not change after the setting.</string>
    <string name="Msg_UnCoordinatesTip">The aircraft coordinates were not obtained, and the execution failed</string>
    <string name="Msg_DistanceToLongTip">The target point is too far away to reach the target point</string>
    <string name="string_no_rc_location">Unable to obtain remote control coordinates, execution failed</string>
    <string name="Msg_GoHomePointDistanceOut">The home point setting cannot be greater than 2500 meters</string>
    <string name="bizflight_backhome_latlng_with_aircraft_too_far">The distance between the return point and the aircraft exceeds 15KM.</string>
    <string name="bizflight_backhome_latlng_without_limit_distance">The return distance exceeds the limit distance, so it cannot be set.</string>
    <string name="home_point_set_successfully">The home point is set successfully</string>
    <string name="home_point_set_failed">The home point is set failed</string>
    <string name="tip">Tips</string>
    <string name="string_please_wait">Please wait</string>
    <string name="string_please_waiting">Please wait...</string>
    <string name="string_vision_error">Visual abnormality, please restart the aircraft and try again</string>
    <string name="Label_SportModel_obstaticIsOff">Visual obstacle avoidance turn off during sports mode</string>
    <string name="Label_AttitudeModel_obstaticIsOff">Visual obstacle avoidance turn off during attitude mode</string>
    <string name="close_vision_title">Close Visual obstacle avoidance</string>
    <string name="close_vision_content">After closing visual obstacle avoidance，aircraft will not automatically slow down and hover when the obstacle is detected. Please confirm the operation</string>
    <string name="Lable_Confirm">Confirm</string>
    <string name="string_close_obstacle_strategy_tips">When disabled, horizontal, upward, and downward obstacle avoidance are unavailable. Aircraft will not automatically</string>
    <string name="Msg_ConnectFlyTip">Please connect the plane first</string>
    <string name="Label_ConnMore">No control rights</string>
    <string name="Label_Good2Go">Good To Fly</string>
    <string name="Label_InFlight">In  Flight</string>
    <string name="Label_InFlight_Manual">In manual flight</string>
    <string name="Label_InFlight_Task">Mission in flight</string>
    <string name="Label_expMsgLabel">Abnormal alarm</string>
    <string name="title_control">Remote controller setting</string>
    <string name="title_fly">Flight settings</string>
    <string name="title_imgChannel">Image transmission settings</string>
    <string name="title_vision">Visual navigation settings</string>
    <string name="title_common">General settings</string>
    <string name="title_camera">Camera settings</string>
    <string name="title_gimbal">Gimbal settings</string>
    <string name="top_custom_key">Top</string>
    <string name="bot_custom_key">Bottom</string>
    <string name="left_custom_key">Left</string>
    <string name="right_custom_key">Right</string>
    <string name="horizontally_disposed">Horizontal settings</string>
    <string name="above_settings">Above Settings</string>
    <string name="assisted_landing">Assisted landing</string>
    <string name="mount_angel_calibrate">Mount angle calibrate</string>
    <string name="megaphone_angle">Pitch angle</string>
    <string name="label_azimuth">Azimuth</string>
    <string name="Label_set">Settings</string>
    <string name="Label_save">Save</string>
    <string name="string_text_inputbox">TextInputBox</string>
    <string name="string_please_input_message">please input message</string>
    <string name="Label_sendOut">Send</string>
    <string name="string_a_model_title">1.A model (Attitude)</string>
    <string name="string_a_model_content">The obstacle avoidance perception system and the satellite positioning system have stopped working. The position of the aircraft in the hovering state will drift and needs to be controlled in real time through the joystick.</string>
    <string name="string_p_model_title">2.P model (Standard）</string>
    <string name="string_p_mode_content">When GNSS signal is good, GNSS can be used for accurate positioning; The GNSS signal is poor.
                                         When the lighting conditions meet the requirements of the intelligent vision system,the intelligent vision system is used for positioning.
                                         If both GNSS signal and visual assistant positioning fail, it will automatically switch to mode A and be manually controlled by a professional pilot.</string>
    <string name="string_s_model_title">3.S model (Sport)</string>
    <string name="string_s_model_content">S mode is an enhanced mode under P mode. In this mode, the aircraft performance is improved, and GNSS and lower visual perception positioning work normally.
                                          In this mode, the obstacle avoidance system is closed, and the aircraft cannot avoid obstacles by itself</string>
    <string name="string_t_model_title">4.T model (Tripod）</string>
    <string name="string_t_model_content">On the basis of P mode, the tripod mode limits the maneuverability of the aircraft and makes the aircraft more stable during the shooting process.</string>
    <string name="string_exit">Sign out</string>
    <string name="string_follow_title">GO</string>
    <string name="string_stop_follow_title">Stop</string>
</resources>