<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/dp_370"
        android:layout_height="@dimen/dp_300"
        android:background="@drawable/dialog_general_round_style"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_266">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_a_model_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_14"
                    android:text="@string/string_a_model_title"
                    android:textColor="@color/color_FF6C00"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_a_model_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:text="@string/string_a_model_content"
                    android:textColor="@color/color_3E505C"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_a_model_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_p_model_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/string_p_model_title"
                    android:textColor="@color/color_FF6C00"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_a_model_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_p_model_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:text="@string/string_p_mode_content"
                    android:textColor="@color/color_3E505C"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_p_model_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_s_model_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/string_s_model_title"
                    android:textColor="@color/color_FF6C00"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_p_model_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_s_model_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:text="@string/string_s_model_content"
                    android:textColor="@color/color_3E505C"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_s_model_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_t_model_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/string_t_model_title"
                    android:textColor="@color/color_FF6C00"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_s_model_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_t_model_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:text="@string/string_t_model_content"
                    android:textColor="@color/color_3E505C"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_t_model_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/color_D2D2D2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_33"
            android:gravity="center"
            android:text="@string/Label_Sure"
            android:textColor="@color/color_2D2D2D"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</LinearLayout>